--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VITE_APP_URL =http://16.171.150.24/
-# VITE_APP_URL =https://truck-tracking-fe.vercel.app/
-VITE_APP_GOOGLE_CLIENT_ID_NEW = 312917313363-r22nt9c1jspatn4qcjr8m90lq5h0p9cr.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRATe = 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
+VITE_APP_URL =""
+VITE_APP_GOOGLE_CLIENT_ID_NEW = ""
+GOOGLE_CLIENT_SECRATe = ""
